--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -934,7 +934,8 @@ p:last-child  {
   line-height: 60px;
 }
 .user-menu.nav > li > a .badge {
-  background-color: #1b5a90;
+  /* background-color: #1b5a90; */
+  background-color: #3EB75E;
   display: block;
   font-size: 10px;
   font-weight: 700;
@@ -2173,7 +2174,7 @@ a.bg-danger:focus, a.bg-danger:hover, button.bg-danger:focus, button.bg-danger:h
 }
 
 .sidebar {
-  background-color: #1b5a90;
+  background-color: #3EB75E;
   margin-top: 0;
   -webkit-transition: all 0.2s ease-in-out 0s;
   -ms-transition: all 0.2s ease-in-out 0s;
