--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -137,7 +137,7 @@ input:-webkit-autofill:focus {
   height: 40px;
 }
 .form-control:focus {
-  border-color: #00d0f1;
+  border-color: #3eb75e;
   box-shadow: none;
   outline: 0 none;
 }
@@ -1041,8 +1041,8 @@ p:last-child  {
   padding: 10px 15px;
 }
 .user-menu .dropdown-menu .dropdown-item:hover {
-  color: #ffffff;
-  background: #00d0f1;
+  color: #fff;
+  background: #3eb75e;
 }
 
 .user-img {
@@ -1206,7 +1206,7 @@ html.menu-opened body {
   width: 230px;
 }
 .top-nav-search .form-control {
-  border-color: rgba(0, 0, 0, 0.1);
+  border-color:1px solid black;
   color: #333333;
   height: 40px;
   border-radius: 50px;
@@ -2335,13 +2335,13 @@ button.bg-danger:hover {
   }
 }
 @media (min-width: 992px) {
-  .mini-sidebar.expand-menu .sidebar .sidebar-menu ul > li > a span {
+  .mini-sidebar.expand-menu .sidebar .sidebar-menu ul > li > .link span {
     display: inline;
     opacity: 1;
   }
 }
 @media (min-width: 992px) {
-  .mini-sidebar.expand-menu .sidebar .sidebar-menu ul > li > a i {
+  .mini-sidebar.expand-menu .sidebar .sidebar-menu ul > li > .link i {
     font-size: 24px;
     width: 20px;
   }
@@ -2362,7 +2362,7 @@ button.bg-danger:hover {
   }
 }
 @media (min-width: 992px) {
-  .mini-sidebar .sidebar .sidebar-menu ul > li > a span {
+  .mini-sidebar .sidebar .sidebar-menu ul > li > .link span {
     display: none;
     opacity: 0;
     -webkit-transition: all 0.2s ease-in-out;
@@ -2386,10 +2386,10 @@ button.bg-danger:hover {
     margin-left: 78px;
   }
 }
-#submenu-tab .link{
+#submenu-tab .link {
   text-decoration: none;
   background-color: red;
- }
+}
 
 #sidebar {
   background-color: #3eb75e;
@@ -2551,7 +2551,7 @@ button.bg-danger:hover {
   padding: 0 20px;
 }
 .sidebar-menu ul li .link:hover {
-  color: #3eb75e;
+  color: black;
 }
 .sidebar-menu ul li.active .link {
   background-color: #fff;
