--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1417,7 +1417,7 @@ table.table td h2 a {
   color: #333333;
 }
 table.table td h2 a:hover {
-  color: #00d0f1;
+  color: #3eb75e;
 }
 table.table td h2 span {
   color: #888888;
